# session-adapters

./: .gitignore  README.md  Taskfile.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: package.yaml
src/session_adapters/: __about__.py  base.py  file_adapter.py  http_conts.py  oci_adapter.py  s3_adapter.py
tests/: __init__.py  conftest.py  test_base_adapter.py  test_file_adapter.py  test_oci_adapter.py  test_s3_adapter.py
